# swiss_GTFS_boundaries

./: .gitignore  README.md  build_graphs.py  diagram_extract.py  filter_by_geometry.py  filter_by_geometry_scale.py  name_mappings.py  pyproject.toml  requirements.txt
experiments/: GTFS_Graphs.ipynb  clustering.ipynb
notebooks/: 01_graph_exploration.ipynb  02_feature_exploration.ipynb  03_analysis_maps.ipynb
src/swiss_gtfs/: __init__.py  config.py
src/swiss_gtfs/analysis/: cluster.py  geo_join.py
src/swiss_gtfs/cli/: build_features.py  build_graphs.py  filter_gtfs.py  run_analysis.py
src/swiss_gtfs/data/: boundaries.py  filtering.py  gtfs_source.py
src/swiss_gtfs/features/: persistence.py  vectorize.py
src/swiss_gtfs/graphs/: build.py  distances.py  io.py  visualize.py
src/swiss_gtfs/mappings/: regions.py
