[project]
name = "swiss-gtfs"
version = "0.1.0"
description = "Modular Swiss GTFS transit graph pipeline: filter, build, featurize, analyse."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core data handling
    "pandas",
    "numpy",
    "geopandas>=1.0",
    "pyogrio",
    "fiona",
    # Network downloads
    "requests",
    # Transit graph
    "gtfs2nx",
    "city2graph>=0.3.1",
    "networkx",
    "osmnx",
    # TDA
    "ripser",
    "persim",
    "scipy",
    # ML / analysis
    "scikit-learn",
    # Visualisation
    "folium",
    "branca>=0.8.2",
    "matplotlib",
    # Geo utilities
    "geopy",
    # Notebooks
    "ipykernel>=7.2.0",
    "mapclassify>=2.10.0",
]

[project.scripts]
gtfs-filter   = "swiss_gtfs.cli.filter_gtfs:main"
gtfs-build    = "swiss_gtfs.cli.build_graphs:main"
gtfs-features = "swiss_gtfs.cli.build_features:main"
gtfs-analyze  = "swiss_gtfs.cli.run_analysis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_gtfs"]

[tool.uv]
override-dependencies = [
    "geopandas>=1.0",
]

[tool.uv.sources]
# Add any local or git overrides here if needed

[tool.ruff]
line-length = 100
target-version = "py313"
